<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up_fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/slide_title_login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/slide_desc_margin_top"
        android:paddingRight="@dimen/slide_desc_padding_rl"
        android:paddingLeft="@dimen/slide_desc_padding_rl"
        android:textSize="@dimen/slide_title_text_size"
        android:textColor="@color/black"
        android:text="@string/title_login_sign_up"
        android:layout_alignParentRight="true"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/slide_desc_login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/slide_desc_margin_top"
        android:paddingRight="@dimen/slide_desc_padding_rl"
        android:paddingLeft="@dimen/slide_desc_padding_rl"
        android:textSize="@dimen/slide_desc_text_size"
        android:textColor="@color/black"
        android:text="@string/desc_login_sign_up"
        android:layout_below="@id/slide_title_login_sign_up"
        android:layout_alignParentRight="true"/>



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email_sign_up"
            android:layout_width="@dimen/width_btn_login_sign_up"
            android:layout_height="@dimen/edt_height"
            android:layout_below="@id/slide_desc_login_sign_up"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"
            android:textColorHint="@color/grey_edt"
            android:inputType="textEmailAddress"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_phone_number_sign_up"
            android:layout_width="@dimen/width_btn_login_sign_up"
            android:layout_height="@dimen/edt_height"
            android:layout_below="@id/edt_email_sign_up"
            android:layout_centerHorizontal="true"
            android:hint="@string/phone_number"
            android:textColorHint="@color/grey_edt"
            android:inputType="phone"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password_sign_up"
            android:layout_width="@dimen/width_btn_login_sign_up"
            android:layout_height="@dimen/edt_height"
            android:layout_below="@id/edt_phone_number_sign_up"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:textColorHint="@color/grey_edt"
            android:inputType="textPassword"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_re_password_sign_up"
            android:layout_width="@dimen/width_btn_login_sign_up"
            android:layout_height="@dimen/edt_height"
            android:layout_below="@id/edt_password_sign_up"
            android:layout_centerHorizontal="true"
            android:hint="@string/re_password"
            android:textColorHint="@color/grey_edt"
            android:inputType="textPassword"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/slide_margin"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@drawable/shape_btn_sign_up"
        android:layout_below="@id/edt_re_password_sign_up"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</FrameLayout>